LU-2943 mdt: Not return -EREMOTE for open lock.

Instead of returning -EREMOTE for open_lock, it will check
the open lock by the DISP_OPEN_LOCK, otherwise it will cause
transno being wrongly set to 0.
This is b2_1 version/port of master patch for LU-2927
(Change #5694 with Change-Id I4f3bccea in Gerrit).

Signed-off-by: Bruno Faccini <bruno.faccini@intel.com>
Change-Id: If66f83ab227d524f0cecb8d30b3aa7c272ec3047